@@ -51,12 +51,53 @@
 
   native方法运行需要的内存空间
 
-- #### 堆
+- #### 堆（Java Heap）
+
+  通过-Xmx 设置最大堆内存大小
 
   定义：存放通过new关键字创建的对象或数组
 
   特点：
-
+  
   - 线程共享，堆中对象都需要考虑线程安全问题
   - 有垃圾回收机制
+  
+  堆内存诊断：
+  
+  - jps工具：查看当前系统中有哪些Java进程
+  
+  - jmap工具：查看堆内存占用情况
+  
+    jmap -heap [pid]
+  
+  - jconsole工具：图形界面的，多功能监测工具，可以连续监测
+  - jvisualvm工具：堆转储 dump
 
+- #### 方法区（Method Area）
+
+  - JDK1.8以前会导致永久代内存溢出，java.lang.OutOfMemoryError: PermGen space（-XX:MaxPermSize=8m）
+  - JDK1.8后会导致元空间（Metaspace 本地内存中）内存溢出 java.lang.OutOfMemoryError: Metaspace (-XX:MaxMetaspaceSize=8m 将元空间大小设置为8m)
+
+  场景:
+
+  sping、mybatis等框架通过cglib运行期间生成类
+
+  ##### 运行时常量池
+
+  javap -v [class]  反编译class字节码
+
+  StringTable：
+
+  - 常量池中的字符串仅是符号，第一次用到时才会变为对象
+
+  - 利用串池的机制，来避免重复创建字符串对象
+
+  - 字符串变量拼接的原理是StringBuilder（jdk1.8）
+
+  - 字符串常量拼接的原理是编译期优化
+
+  - 可以使用intern方法，主动将串池中还没有的字符串对象放入串池
+
+    1.8 将这个字符串对象尝试放入串池，如果有则不会放入，如果没有则放入串池，会把串池中的对象返回
+
+    1.6将这个字符串对象尝试放入串池，如果有则不会放入，如果没有会把此对象复制一份，放入串池，并把串池对象返回
